# fortivpn-tray

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml  scorecard.yml
binaries/: fortivpn-helper-aarch64-apple-darwin
crates/fortivpn/: Cargo.toml
crates/fortivpn-app/: Cargo.toml
crates/fortivpn-app/src/: ipc_client.rs  main.rs  notification.rs  settings.rs
crates/fortivpn-app/src/platform/: linux.rs  macos.rs  windows.rs
crates/fortivpn-cli/: Cargo.toml
crates/fortivpn-cli/src/: main.rs
crates/fortivpn-daemon/: Cargo.toml  build.rs
crates/fortivpn-daemon/src/: installer.rs  main.rs  profile.rs  settings_webview.rs
crates/fortivpn-daemon/src/platform/: linux.rs  macos.rs  windows.rs
crates/fortivpn-helper/: Cargo.toml
crates/fortivpn-helper/src/: commands.rs  main.rs  unix_main.rs
crates/fortivpn-helper/src/platform/: linux.rs  macos.rs  windows.rs
crates/fortivpn-ui/: Cargo.toml
crates/fortivpn-ui/resources/: password-prompt.html  settings.html
crates/fortivpn-ui/src/: ipc_client.rs  keychain.rs  main.rs
crates/fortivpn/src/: async_tun.rs  auth.rs  helper.rs  lib.rs  routing.rs  tun.rs
crates/fortivpn/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/fortivpn/tests/: ppp_test.rs
docs/superpowers/plans/: 2026-03-17-battery-optimization.md  2026-04-01-cross-platform-ui-update.md  2026-04-02-plan-a-daemon-tcp-migration.md  2026-04-02-plan-b-vpn-library-cross-platform.md  2026-04-03-platform-module-refactor.md  2026-04-03-windows-vpn-support.md
docs/superpowers/specs/: 2026-03-17-battery-optimization-design.md  2026-04-01-cross-platform-ui-update-design.md  2026-04-02-cross-platform-rust-rewrite-design.md  2026-04-03-platform-module-refactor-design.md
macos/FortiVPNTray/: .gitignore  Package.swift
macos/FortiVPNTray/.build/: build.db  plugin-tools.yaml
macos/FortiVPNTray/.build/arm64-apple-macosx/debug/: FortiVPNTray  plugin-tools-description.json
macos/FortiVPNTray/.build/arm64-apple-macosx/debug/FortiVPNTray.build/: App.d  App.swiftdeps  AppDelegate.d  AppDelegate.swiftdeps  DaemonClient.d  DaemonClient.swiftdeps  FortiVPNTray.emit-module.d  Models.d  Models.swiftdeps  ProfileFormView.d  ProfileFormView.swiftdeps  SettingsView.d  SettingsView.swiftdeps  VPNState.d  VPNState.swiftdeps  master.priors  output-file-map.json
macos/FortiVPNTray/.build/arm64-apple-macosx/debug/FortiVPNTray.dSYM/Contents/: Info.plist
macos/FortiVPNTray/.build/arm64-apple-macosx/debug/FortiVPNTray.product/: Objects.LinkFileList
macos/FortiVPNTray/.build/arm64-apple-macosx/debug/ModuleCache/1CP5ITWHKZ1Z6/: Accessibility-14JBEP228SSWD.pcm  ApplicationServices-1CRCAN744IO4N.pcm  CFNetwork-31P8GDC5EWL41.pcm  CUPS-2KH16NWVLNVO0.pcm  ColorSync-1KWH2T10UXMVF.pcm  CoreData-3U3WCU0AV8KFN.pcm  CoreFoundation-1YUXQIQY0O2PG.pcm  CoreGraphics-3BVRDEA9TPJO6.pcm  CoreImage-2GOW3UHHPA7JV.pcm  CoreText-2TWBA4D5T9PK8.pcm  CoreTransferable-2R8U0VHQ829LU.pcm  CoreVideo-2TUG535GNYVWG.pcm  DataDetection-VJZRRQZ9LJ5H.pcm  DeveloperToolsSupport-3D8UR8C75BBDP.pcm  DiskArbitration-QUEIKMA743UI.pcm  Dispatch-TQFI8E3F5ULS.pcm  IOSurface-C02TFLLHKUMB.pcm  ImageIO-1TXEVO4OVZF0F.pcm  MachO-1E48RKM8MIOQ3.pcm  Metal-18EKZI9NPGSMT.pcm  OSLog-2DK5Z4UGUWC50.pcm  ObjectiveC-3HFLVFB2XGC12.pcm  OpenGL-329UYKZPXKRCD.pcm  QuartzCore-1W7PBY90UL87F.pcm  Security-2M3Q6MCL8PZ2G.pcm  Spatial-1SOY00FT08BNR.pcm  SwiftShims-6PVXR3VD9JVP.pcm  SwiftUI-113QNQXH6ODE0.pcm  SwiftUICore-GOH3HP65AODU.pcm  Symbols-9DI0Y0T0FOT5.pcm  UniformTypeIdentifiers-2FSB314US6HN5.pcm  XPC-1BHHNDBXNIN4T.pcm  _AvailabilityInternal-FOXKIHXXPWT.pcm  _Builtin_float-3PGQF5YETHUX5.pcm  _Builtin_intrinsics-3PGQF5YETHUX5.pcm  _Builtin_inttypes-3PGQF5YETHUX5.pcm  _Builtin_limits-3PGQF5YETHUX5.pcm  _Builtin_stdarg-3PGQF5YETHUX5.pcm  _Builtin_stdatomic-3PGQF5YETHUX5.pcm  _Builtin_stdbool-3PGQF5YETHUX5.pcm  (+17 more)
macos/FortiVPNTray/.build/arm64-apple-macosx/debug/ModuleCache/30W4LF5MGPTOJ/: ApplicationServices-1CRCAN744IO4N.pcm  CFNetwork-31P8GDC5EWL41.pcm  CUPS-2KH16NWVLNVO0.pcm  ColorSync-1KWH2T10UXMVF.pcm  CoreFoundation-1YUXQIQY0O2PG.pcm  CoreGraphics-3BVRDEA9TPJO6.pcm  CoreText-2TWBA4D5T9PK8.pcm  CoreTransferable-2R8U0VHQ829LU.pcm  CoreVideo-2TUG535GNYVWG.pcm  DataDetection-VJZRRQZ9LJ5H.pcm  DiskArbitration-QUEIKMA743UI.pcm  Dispatch-TQFI8E3F5ULS.pcm  IOSurface-C02TFLLHKUMB.pcm  ImageIO-1TXEVO4OVZF0F.pcm  MachO-1E48RKM8MIOQ3.pcm  (+29 more)
macos/FortiVPNTray/.build/arm64-apple-macosx/debug/Modules/: FortiVPNTray.swiftdoc  FortiVPNTray.swiftmodule  FortiVPNTray.swiftsourceinfo
macos/FortiVPNTray/.build/index-build/: build.db  debug.yaml  plugin-tools.yaml
macos/FortiVPNTray/.build/index-build/arm64-apple-macosx/debug/: description.json  plugin-tools-description.json
macos/FortiVPNTray/Sources/: App.swift  AppDelegate.swift  DaemonClient.swift  Models.swift  ProfileFormView.swift  SettingsView.swift  VPNState.swift
resources/: Info.plist
scripts/: bundle-app.sh
src/: index.html  ipc.rs  keychain.rs  main.js  main.rs  notification.rs  password-prompt.html  password-prompt.js  styles.css  vpn.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: fortivpn-helper-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/crates/fortivpn/: Cargo.toml
src-tauri/crates/fortivpn-cli/src/: main.rs
src-tauri/crates/fortivpn-helper/src/: main.rs
src-tauri/crates/fortivpn/src/: async_tun.rs  auth.rs  bridge.rs  helper.rs  lib.rs  ppp.rs  routing.rs  tun.rs  tunnel.rs
src-tauri/icons/: icon.icns
src-tauri/resources/settings/: index.html
src-tauri/src/: app.rs  installer.rs  ipc.rs  keychain.rs  lib.rs  main.rs  nap.rs  native_ui.rs  profile.rs  vpn.rs
src-tauri/tests/: auth_test.rs  bridge_test.rs  ppp_test.rs  tunnel_test.rs
src/binaries/: fortivpn-helper-aarch64-apple-darwin
src/crates/fortivpn-cli/: Cargo.toml
src/crates/fortivpn-cli/src/: main.rs
src/crates/fortivpn/src/: tunnel.rs
src/resources/: com.fortivpn-tray.helper.plist
src/src/: installer.rs  vpn.rs
tests/: bridge_test.rs
(+507 files in other folders)
