[workspace]
members = [".", "crates/fortivpn", "crates/fortivpn-helper", "crates/fortivpn-cli", "crates/fortivpn-ui"]

[package]
name = "fortivpn-daemon"
version = "0.1.0"
description = "A headless daemon for FortiGate SSL-VPN (IPC over Unix socket)"
authors = ["you"]
edition = "2021"

[build-dependencies]

[dependencies]
fortivpn = { path = "crates/fortivpn" }

# Logging (macOS unified logging via os_log)
log = "0.4"
oslog = "0.2"

# Notifications
notify-rust = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Data & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "fortivpn-daemon"
path = "src/main.rs"
