[workspace]
members = [".", "crates/fortivpn", "crates/fortivpn-helper", "crates/fortivpn-cli", "crates/fortivpn-ui"]

[package]
name = "fortivpn-daemon"
version = "0.1.0"
description = "A headless daemon for FortiGate SSL-VPN (IPC over Unix socket)"
authors = ["you"]
edition = "2021"

[build-dependencies]

[dependencies]
fortivpn = { path = "crates/fortivpn" }

# Logging
log = "0.4"
oslog = { version = "0.2", optional = true }
env_logger = { version = "0.11", optional = true }

# Notifications (Linux/Windows only — macOS uses Swift osascript)
notify-rust = { version = "4", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Data & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["macos-logging"]
macos-logging = ["dep:oslog"]
generic-logging = ["dep:env_logger", "dep:notify-rust"]

[[bin]]
name = "fortivpn-daemon"
path = "src/main.rs"
