[workspace]
members = [".", "crates/fortivpn", "crates/fortivpn-helper", "crates/fortivpn-cli"]

[package]
name = "fortivpn-tray"
version = "0.1.0"
description = "A native macOS system tray app for FortiGate SSL-VPN"
authors = ["you"]
edition = "2021"

[build-dependencies]

[dependencies]
fortivpn = { path = "crates/fortivpn" }

# System tray
tao = { version = "0.34", default-features = false }
tray-icon = "0.21"
muda = "0.17"

# Image loading for tray icons
image = { version = "0.25", default-features = false, features = ["png"] }

# Notifications
notify-rust = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Data & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }

# macOS native APIs
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication", "NSRunningApplication", "NSWindow", "NSView",
    "NSTextField", "NSSecureTextField", "NSButton", "NSControl",
    "NSText", "NSResponder", "NSPanel",
] }
objc2-foundation = { version = "0.3", features = [
    "NSString", "NSGeometry", "NSThread",
] }

[[bin]]
name = "fortivpn-tray"
path = "src/main.rs"
