[package]
name = "fortivpn-app"
version = "0.1.0"
edition = "2021"
description = "Cross-platform tray UI for FortiVPN"

[[bin]]
name = "fortivpn-app"
path = "src/main.rs"

[dependencies]
gpui = { version = "0.2", features = ["macos-blade"] }
tray-icon = "0.21"
muda = "0.17"
image = { version = "0.25", default-features = false, features = ["png"] }
keyring = { version = "3", features = ["apple-native"] }
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }
