[package]
name = "fortivpn-ui"
version = "0.1.0"
edition = "2021"
description = "Cross-platform tray UI for FortiVPN (Windows/Linux)"

[[bin]]
name = "fortivpn-ui"
path = "src/main.rs"

[dependencies]
tray-icon = "0.21"
muda = "0.17"
wry = "0.55"
tao = { version = "0.34", features = ["rwh_06"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
keyring = { version = "3", features = ["apple-native"] }
notify-rust = "4"
